re-built the whole app with solidjs

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="/favicon.png">
+    <title>Beats</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beats</title>
-  <link data-trunk href="/public/beats.png" rel="icon">
-  <link data-trunk href="/styles/tailwind.css" rel="css" />
-</head>
-
+    <script src="/src/index.tsx" type="module"></script>
+  </body>
 </html>
-
-<body>
-  <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-</body>
